# Robotics-Software-Engineer-Technical-Assessment

./: .gitattributes  Dockerfile  README.md  docker-compose.yml
src/: data.yaml
src/linear_algebra_nodes/: CMakeLists.txt  package.xml
src/linear_algebra_nodes/src/: client_node.cpp  server_node.cpp  test
src/linear_algebra_service/: CMakeLists.txt  package.xml
src/linear_algebra_service/srv/: LeastSquares.srv
src/ur20_display/: CMakeLists.txt  package.xml
src/ur20_display/config/: joint_config.yaml
src/ur20_display/launch/: display.launch.py
src/ur20_display/rviz/: ur20.rviz
src/ur20_display/scripts/: trajectory_plotter.py
src/ur20_display/src/: ur20_display_node.cpp
src/ur20_display/urdf/: ur20_with_gripper.urdf.xacro
